--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -63,6 +63,7 @@
 	--color-gray-800: #2d2f36;
 	--color-black: #111;
 	--color-white: #fff;
+	--color-neutral-50: #f5f5f5;
 	--color-neutral-100: #e9e9e9;
 	--color-neutral-200: #dddddd;
 	--color-neutral-300: #a4a4a4;
