feat: add cursor + border + message

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
@@ -38,6 +38,7 @@
 		padding: 0 !important;
 	}
 	:global(.ant-popover-inner) {
+		border: 1px solid var(--color-neutral-200);
 		overflow: hidden;
 	}
 }
