--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
@@ -35,6 +35,10 @@
 
 .timelineBarPopoverContainer {
 	:global(.ant-popover-inner-content) {
-		padding: 4px !important;
+		padding: 0 !important;
+	}
+	:global(.ant-popover-inner) {
+		border: 1px solid var(--color-neutral-200);
+		overflow: hidden;
 	}
 }
