--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -1,43 +1,21 @@
 @import 'src/static/shared.scss';
 
-.errorPage {
+.container {
+	--header-height: 80px;
 	--left-panel-width: 475px;
 	--top-padding: 80px;
 
+	display: flex;
+	padding-top: var(--header-height);
 	width: 100%;
-
-	&.withoutLeftPanel {
-		grid-template-columns: 1fr var(--right-panel-width);
-
-		&.empty {
-			grid-template-columns: 1fr;
-		}
-	}
-
-	&.empty {
-		grid-template-columns: var(--left-panel-width) 1fr;
-	}
 
 	&.withErrorState {
 		padding-top: var(--header-height);
 	}
 }
 
-.errorPageCenterColumn {
-	height: calc(100vh - var(--top-padding));
-	overflow-y: auto;
-	padding-top: var(--size-large);
-
-	&.hidden {
-		padding-left: var(--size-xxLarge);
-	}
-
-	&.bannerShown {
-		height: calc(100vh - var(--top-padding) - var(--banner-height));
-	}
-}
-
-.errorPageLeftColumn {
+.searchContainer {
+	height: 100%;
 	margin-top: calc((-1 * var(--top-padding)) + var(--header-height));
 	width: var(--left-panel-width);
 
@@ -46,266 +24,9 @@
 	}
 }
 
-.errorPageRightColumn {
+.detailsContainer {
 	display: flex;
-	flex-direction: column;
-	height: calc(100vh - var(--top-padding));
-	padding-bottom: var(--size-large);
-	padding-right: var(--size-medium);
-	padding-top: var(--size-large);
-	position: sticky;
-	row-gap: var(--size-large);
-	top: 120px;
-	width: 100%;
-
-	&.bannerShown {
-		height: calc(100vh - var(--top-padding) - var(--banner-height));
-	}
-}
-
-.title {
-	display: inline-block;
-	font-size: 26px;
-	margin-bottom: 10px !important;
-	margin-right: 10px !important;
-	max-width: 400px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-.eventText {
-	color: var(--color-gray-500);
-}
-
-.fieldWrapper {
-	margin-bottom: var(--size-large);
-}
-
-.subSection {
-	align-items: center;
-	border-top: 1px solid var(--color-gray-300);
-	display: flex;
-	font-weight: 200;
-	padding: 10px;
-	width: 100%;
-}
-
-.expandButton {
-	color: var(--color-purple) !important;
-	cursor: pointer;
-}
-
-.section {
-	background: var(--color-primary-background);
-	border-radius: 8px;
-	display: flex;
-	margin-bottom: 20px;
-	transition: 0.4s;
-	width: 100%;
-}
-
-.sectionRow {
-	display: flex;
-	gap: var(--size-xSmall);
-	width: 100%;
-}
-
-.sectionItem {
-	display: inline-block;
-	width: 50%;
-}
-
-.snippetHeadingTwo {
-	align-items: center;
-	display: flex;
-	font-weight: 400;
-	justify-content: space-between;
-
-	span {
-		display: inline-flex;
-	}
-}
-
-.triggerWrapper {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-
-	> div {
-		border-bottom-left-radius: var(--border-radius);
-		border-bottom-right-radius: var(--border-radius);
-		padding: var(--size-medium);
-	}
-
-	hr {
-		border-top: var(--color-gray-300);
-		margin: 0;
-		width: 100%;
-	}
-}
-
-.iconWrapper {
-	align-items: center;
-	color: var(--color-blue-500);
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	margin-left: auto;
-	margin-right: 5px;
-}
-
-.collapsible {
-	width: 100%;
-}
-
-.icon {
-	color: var(--color-purple);
-	cursor: pointer;
-	float: right;
-	height: 14px;
-	transition: 0.4s;
-	width: 14px;
-}
-
-.stackTraceErrorTitle {
-	color: var(--text-primary);
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-.graphSection {
-	flex-direction: column;
-	padding: 30px 15px 20px;
-}
-
-.graphLabels {
-	color: var(--color-gray-500);
-	display: flex;
-	justify-content: flex-end;
-	margin-top: -20px;
-	padding: 0 10px;
-	width: 100%;
-}
-
-.errorLogDivider {
-	border-bottom: 1px solid var(--color-gray-300);
-}
-
-.errorLogCell {
-	display: flex;
-	overflow: hidden;
-	white-space: nowrap;
-}
-
-.errorLogOverflow {
-	direction: rtl;
-}
-
-.errorLogsTitle {
-	--columns: 80px 80px 2fr 1fr 1fr 2fr 1fr;
-
-	display: grid;
-	font-weight: 400;
-	grid-template-columns: var(--columns);
-	width: 100%;
-
-	span {
-		padding: 0 4px;
-	}
-}
-
-.errorLogWrapper {
-	max-height: 400px;
-	overflow: auto;
-}
-
-.errorLogItem {
-	--columns: 80px 80px 2fr 1fr 1fr 2fr 1fr;
-
-	border-bottom: 1px solid var(--color-gray-300);
-	color: var(--text-primary);
-	display: grid;
-	font-weight: 200;
-	grid-template-columns: var(--columns);
-	padding: 10px;
-	width: 100%;
-
-	&:hover {
-		background-color: var(--color-gray-200);
-	}
-
-	span {
-		overflow: hidden;
-		padding: 0 6px;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-	}
-}
-
-.errorLogButton {
-	display: block;
-	margin: 10px auto;
-	max-width: 240px;
-}
-
-.actionButtons {
-	display: flex;
-	gap: var(--size-xSmall);
+	flex-grow: 1;
+	height: 100%;
 	justify-content: space-around;
-}
-
-.actionButtonsContainer {
-	margin-bottom: 0;
-}
-
-.commentInputContainer {
-	padding: 0 var(--size-xSmall);
-}
-
-.intercomLink {
-	cursor: pointer;
-	text-decoration: underline;
-}
-
-.commentInputDiv {
-	@include rounded-border;
-	align-items: center;
-	display: flex;
-	padding: var(--size-xSmall);
-}
-
-.commentDiv {
-	@include rounded-border;
-	margin-bottom: var(--size-small);
-	padding: var(--size-small);
-
-	&.deepLinked {
-		border: 1px solid var(--color-purple);
-		box-shadow: 0 0 9px rgba(86, 41, 198, 0.25);
-	}
-}
-
-.titleWithAction {
-	align-items: center;
-	display: flex;
-	justify-content: space-between;
-
-	h3 {
-		margin-bottom: 0 !important;
-	}
-}
-
-.titleWithMargin {
-	margin-bottom: var(--size-small);
-}
-
-.titleContainer {
-	margin-bottom: var(--size-large);
-}
-
-.rightButtonsContainer {
-	display: grid;
-	grid-column-gap: 10px;
-	grid-template-columns: auto auto;
 }
