--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -30,6 +30,11 @@
 	height: 100%;
 	justify-content: space-around;
 
+	.errorDetails {
+		padding: var(--size-medium) var(--size-large);
+		width: 100%;
+	}
+
 	.errorMetrics {
 		display: flex;
 		gap: var(--size-medium);
