--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelinePopover/TimelinePopover.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelinePopover/TimelinePopover.module.scss
@@ -4,11 +4,17 @@
 	flex-direction: column;
 	justify-content: center;
 	width: 224px;
-	span {
+	span:not(.selectedTypeName) {
 		font-size: 13px;
 		font-weight: 400;
 		letter-spacing: -0.01em;
 		line-height: 20px;
+	}
+	span.selectedTypeName {
+		color: var(--color-neutral-800);
+		font-size: 11px;
+		font-weight: 500;
+		line-height: 12px;
 	}
 }
 
@@ -85,8 +91,8 @@
 	padding: 0 4px;
 
 	span {
-		font-size: 12px;
-		line-height: 16px;
+		font-size: 12px !important;
+		line-height: 16px !important;
 	}
 }
 
