fix: zooming from session monitor

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -13,7 +13,7 @@
 	z-index: 5;
 }
 
-.progressMonitor {
+.sessionMonitor {
 	border-bottom: 1px var(--color-neutral-100) solid;
 	border-top: 1px var(--color-neutral-100) solid;
 	height: 22px;
