fix: add inactivity period mask

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -145,3 +145,11 @@
 .timeTickMinor {
 	height: 2px;
 }
+
+.inactivityPeriodMask {
+	background-color: var(--color-neutral-50);
+	bottom: 0;
+	height: 100%;
+	position: absolute;
+	z-index: -1;
+}
