--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelinePopover/TimelinePopover.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelinePopover/TimelinePopover.module.scss
@@ -24,7 +24,7 @@
 	display: flex;
 	height: 36px;
 	justify-content: flex-start;
-	padding: 8px;
+	padding: 4px 8px;
 	user-select: none;
 	width: 100%;
 }
@@ -63,7 +63,6 @@
 	display: flex;
 	justify-content: flex-start;
 	padding: 4px 8px;
-	padding-right: 6px;
 	width: 100%;
 }
 
