* The bulk of the state logic that manages the player is redactored into `PlayerState.ts` state machine (SM) using `useReducer`. * Rewrites the `eventChunks` loading logic using `async` to expose the loading promise, so that chunk loading can block the `play/pause` transition that follows (for future enablement of rrweb virtual dom). * Previous logic would duplicate some chunk loading / `replayer.play/pause` calls due to state management errors. This PR cleans those issues up and uses a cleaner isolation of the player state machine to prevent similar issues in the future. * Adds a `log(...)` method that prints to `console.log` for local development of the player SM. * Throttles time updates to avoid rerendering the player-related components on each frame and uses a CSS animation to smooth the time ticker
Local deploy + preview environment with the following:
* Chunked session
* Live session
* Processed and then re-lived session (logic used by live mode)
* Unchunked session (logic used by live mode)

Given that it is challenging to `HighlightGate` this change but it is limited in impact to replays, thinking I will monitor a rollout of this and revert if needed? If anyone has better ideas for how to roll this out, please let me know!

1. Jumping around a lot causes time updates to go out of sync (bringing you back away from where you clicked)

https://github.com/highlight-run/highlight/pull/3234

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimeIndicator/TimeIndicator.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimeIndicator/TimeIndicator.module.scss
@@ -6,6 +6,9 @@
 	height: calc(100% + 36px);
 	position: absolute;
 	z-index: 2;
+	&.timeIndicatorMoving {
+		transition: left 0.17s linear;
+	}
 }
 
 .timeIndicatorHair {
