feat(HIG-2913): limit the inactive periods to a fixed % of active duration (#3187)
## Summary

Now inactive periods get squeezed to take only 10% of the active
duration.

<img width="837" alt="Screen Shot 2022-10-17 at 12 47 07 PM"
src="https://user-images.githubusercontent.com/17913919/196268706-a5e7e0bf-9ed6-4cd5-91ac-f39220bcdd22.png">

## How did you test this change?
The preview is available [here](https://frontend-pr-3187.onrender.com/).

## Are there any deployment considerations?

This affects the behavior of the v1 timeline as well, fixing
[HIG-3008](https://linear.app/highlight/issue/HIG-3008/bug-with-right-panel-getting-stuck#comment-5bc14ec5).

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -13,7 +13,7 @@
 	z-index: 5;
 }
 
-.progressMonitor {
+.sessionMonitor {
 	border-bottom: 1px var(--color-neutral-100) solid;
 	border-top: 1px var(--color-neutral-100) solid;
 	height: 22px;
@@ -144,4 +144,12 @@
 
 .timeTickMinor {
 	height: 2px;
+}
+
+.inactivityPeriodMask {
+	background-color: var(--color-neutral-50);
+	bottom: 0;
+	height: 100%;
+	position: absolute;
+	z-index: -1;
 }
