feat: update the controller look

--- a/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Toolbar.module.scss
@@ -185,6 +185,7 @@
 	border-radius: 0 0 var(--border-radius) var(--border-radius);
 	display: flex;
 	flex-direction: row;
+	gap: 8px;
 	height: 50px;
 	z-index: 30;
 
