--- a/frontend/src/pages/Player/Toolbar/ToolbarControls/ToolbarControls.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ToolbarControls/ToolbarControls.module.scss
@@ -33,6 +33,36 @@
 	border: 1px solid var(--color-neutral-300);
 }
 
+.buttonPopoverOverlay {
+	:global(.ant-popover-inner-content) {
+		padding: 2px 4px !important;
+		div {
+			align-items: center;
+			color: var(--color-neutral-700);
+			display: flex;
+			flex-direction: row;
+			font-size: 12px;
+			gap: 2px;
+			height: 16px;
+			justify-content: center;
+			line-height: 16px;
+			padding: 0 !important;
+		}
+	}
+	:global(.ant-popover-inner) {
+		border: 1px solid var(--color-neutral-200);
+		overflow: hidden;
+	}
+}
+
+.popoverCmdShortcut {
+	background-color: var(--color-neutral-100);
+	border-radius: 3px;
+	color: var(--color-neutral-500);
+	font-size: 11px;
+	padding: 1px 4px;
+}
+
 .moveRight {
 	margin-left: auto;
 }
@@ -43,8 +73,11 @@
 	border-radius: 10px;
 	height: 20px;
 	padding: 2px 10px;
+	width: fit-content;
 	> span {
 		color: var(--color-neutral-700);
+		font-size: 12px;
+		line-height: 16px;
 	}
 }
 
@@ -66,4 +99,18 @@
 }
 .minorButton:focus {
 	border: 1px solid var(--color-neutral-300);
+}
+
+.activeButton,
+.activeButton:hover,
+.activeButton:focus {
+	background: var(--color-new-purple-500);
+	> svg {
+		path {
+			fill: var(--color-white);
+		}
+	}
+	> span {
+		color: var(--color-white);
+	}
 }
