feat: add selection of annotations

--- a/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
@@ -202,3 +202,20 @@
 	line-height: 16px;
 	padding: 0 4px;
 }
+
+.leftSelection {
+	align-items: center;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	&:hover {
+		> .leftClickActionName {
+			visibility: visible;
+		}
+	}
+}
+.leftClickActionName {
+	color: var(--color-neutral-500);
+	font-size: 11px;
+	visibility: hidden;
+}
