fix: horrible jank

--- a/frontend/src/pages/Player/PlayerPage.module.scss
+++ b/frontend/src/pages/Player/PlayerPage.module.scss
@@ -102,6 +102,7 @@
 	flex-direction: column;
 	height: 100%;
 	padding: var(--size-medium);
+	position: relative;
 
 	.playerContainer {
 		display: flex;
