--- a/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
@@ -41,6 +41,7 @@
 .button:hover,
 .button:focus {
 	background-color: var(--color-neutral-50);
+	border: 1px solid var(--color-neutral-100);
 }
 
 .button:focus {
@@ -110,6 +111,7 @@
 .minorButton:hover,
 .minorButton:focus {
 	background: var(--color-neutral-200);
+	border: 0;
 	box-shadow: none;
 }
 .minorButton:focus {
