fix: add live user status

--- a/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
@@ -216,8 +216,13 @@
 		}
 	}
 }
+
 .leftClickActionName {
 	color: var(--color-neutral-500);
 	font-size: 11px;
 	visibility: hidden;
+}
+
+.liveUserStatus {
+	user-select: none;
 }
