--- a/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ToolbarControlBar/ToolbarControlBar.module.scss
@@ -196,8 +196,10 @@
 }
 
 .settingsOptionShortcut {
+	align-items: center;
 	border: 1px solid var(--color-neutral-200);
 	border-radius: 3px;
+	display: flex;
 	font-size: 12px;
 	font-weight: 400;
 	height: 16px;
