--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -7,7 +7,7 @@
 	background-color: var(--color-primary-background);
 	border: 1px solid var(--color-neutral-100);
 	border-bottom: 0;
-	border-radius: 2px 2px 8px 8px;
+	border-radius: 2px 2px 0 0;
 	display: flex;
 	flex-direction: column;
 	z-index: 5;
@@ -15,7 +15,6 @@
 
 .sessionMonitor {
 	border-bottom: 1px var(--color-neutral-100) solid;
-	border-top: 1px var(--color-neutral-100) solid;
 	height: 22px;
 	overflow: hidden;
 	position: relative;
@@ -23,8 +22,20 @@
 	z-index: 2;
 }
 
+.hidden {
+	border: 0 !important;
+	height: 0 !important;
+	overflow-x: hidden !important;
+	visibility: hidden !important;
+}
+
+.hideOverflow {
+	overflow: hidden !important;
+}
+
 .progressBarContainer {
 	background-color: var(--color-neutral-300);
+	border-bottom: 1px solid var(--color-neutral-100);
 	border-radius: 1px 1px 0 0;
 	height: var(--progress-bar-height);
 	overflow: hidden;
@@ -76,7 +87,7 @@
 }
 
 .timelineContainer {
-	height: 118px;
+	height: min-content;
 	overflow-x: scroll;
 	overflow-y: hidden;
 	overscroll-behavior: none;
