--- a/frontend/src/pages/ErrorsV2/SearchPanel/SearchPanel.module.scss
+++ b/frontend/src/pages/ErrorsV2/SearchPanel/SearchPanel.module.scss
@@ -1,31 +1,32 @@
 @import 'src/static/shared.scss';
 
+:root {
+	--error-feed-left-panel-width: 340px;
+}
 .searchPanel {
 	background: var(--color-primary-background);
 	border-right: 1px solid var(--color-gray-300);
 	display: flex;
 	flex-direction: column;
+	flex-shrink: 0;
 	height: 100%;
-	padding: var(--size-large) var(--size-xLarge);
-	padding-bottom: 0;
 	position: relative;
-	transform: translateX(0);
 	transition: transform 0.2s ease-in-out;
 
-	width: var(--left-panel-width);
+	width: var(--error-feed-left-panel-width);
 
 	&.hidden {
 		position: fixed;
-		transform: translateX(calc(-1 * (var(--left-panel-width))));
+		transform: translateX(calc(-1 * var(--error-feed-left-panel-width)));
 	}
 }
 
 .panelToggleButton {
 	position: absolute;
 	right: calc((-1 * var(--size-xLarge) / 2));
-	top: 97px;
+	top: 16px;
 	transform: translateY(calc(112px + var(--size-medium) + 30px));
-	z-index: 999;
+	z-index: 20;
 
 	&.hidden {
 		right: calc(-1 * (var(--sidebar-width) - var(--size-xLarge)));
