feat: add badge component

--- a/frontend/src/pages/ErrorsV2/ErrorFeedCard/ErrorFeedCard.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorFeedCard/ErrorFeedCard.module.scss
@@ -28,3 +28,10 @@
 .badge {
 	height: 16px;
 }
+
+.separator {
+	background: var(--color-neutral-200);
+	border-radius: 999px;
+	height: 4px;
+	width: 4px;
+}
