--- a/frontend/src/components/Histogram/Histogram.module.scss
+++ b/frontend/src/components/Histogram/Histogram.module.scss
@@ -1,22 +1,13 @@
 .container {
 	background: var(--color-primary-background);
 	display: flex;
-	height: 36px;
 	margin: 0 auto;
 	position: relative;
 	width: 100%;
 	z-index: 2;
-
-	.graphContainer {
-		margin: 0 auto;
-		position: relative;
+	> div {
+		height: 36px;
 		width: 100%;
-
-		.sessionInterval {
-			height: var(--size-xxLarge);
-			position: absolute;
-			width: 100%;
-		}
 	}
 }
 
