More error group updates (#3243)

--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -22,7 +22,7 @@
 	height: 100%;
 
 	.errorDetails {
-		padding: var(--size-medium) var(--size-large);
+		padding: var(--size-large) var(--size-xxLarge);
 		width: 100%;
 	}
 
