--- a/frontend/src/pages/NewProject/NewProject.module.scss
+++ b/frontend/src/pages/NewProject/NewProject.module.scss
@@ -47,3 +47,9 @@
 	gap: 10px;
 	justify-content: space-between;
 }
+
+.promoCodeToggle {
+	color: var(--color-purple);
+	cursor: pointer;
+	width: fit-content;
+}
