--- a/frontend/src/pages/Player/Toolbar/ExplanatoryPopover/ExplanatoryPopover.module.scss
+++ b/frontend/src/pages/Player/Toolbar/ExplanatoryPopover/ExplanatoryPopover.module.scss
@@ -7,7 +7,11 @@
 		padding: 4px !important;
 	}
 
-	:global(.ant-popover-inner) {
+	&:global(.ant-popover-placement-top) {
+		pointer-events: none;
+	}
+
+	&:global(.ant-popover-inner) {
 		border: 1px solid var(--color-neutral-200);
 		overflow: hidden;
 	}
