--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/ZoomArea/ZoomArea.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/ZoomArea/ZoomArea.module.scss
@@ -19,11 +19,22 @@
 	height: 100%;
 	justify-content: center;
 	padding: 0 6px;
+	user-select: none;
 }
 
 .zoomAreaHandle {
 	background-color: var(--color-white);
 	border-radius: 0.4em;
 	height: 38%;
+	user-select: none;
 	width: 3px;
+}
+
+.zoomAreaPanSpace {
+	height: 100%;
+	width: 100%;
+}
+
+.animated {
+	transition: 'width 0.17s linear';
 }
