--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -2,7 +2,6 @@
 
 .container {
 	--header-height: 80px;
-	--left-panel-width: 475px;
 	--top-padding: 80px;
 
 	display: flex;
@@ -22,6 +21,7 @@
 	height: 100%;
 
 	.errorDetails {
+		margin-left: 0;
 		padding: var(--size-large) var(--size-xxLarge);
 		width: 100%;
 	}
@@ -31,4 +31,8 @@
 		gap: var(--size-medium);
 		margin-top: var(--size-medium);
 	}
+}
+
+.moveDetailsRight {
+	margin-left: 324px;
 }
