wip: add a mock for search panel control bar

--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -34,5 +34,10 @@
 }
 
 .moveDetailsRight {
-	margin-left: 324px;
+	margin-left: 340px;
+}
+
+.sessionSwitchButton {
+	border: 0 !important;
+	border-radius: 0;
 }
