--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -2,7 +2,6 @@
 
 .container {
 	--header-height: 45px;
-	--left-panel-width: 475px;
 
 	display: flex;
 	width: 100%;
@@ -16,6 +15,7 @@
 	height: 100%;
 
 	.errorDetails {
+		margin-left: 0;
 		padding: var(--size-large) var(--size-xxLarge);
 		width: 100%;
 	}
@@ -25,4 +25,13 @@
 		gap: var(--size-medium);
 		margin-top: var(--size-medium);
 	}
+}
+
+.moveDetailsRight {
+	margin-left: 340px;
+}
+
+.sessionSwitchButton {
+	border: 0 !important;
+	border-radius: 0;
 }
