feat(HIG-2889): add a hacky query builder (#3351)
## Summary
Updates the look of the query builder. Fixes a couple of bugs in the
create/delete modals.

<img width="419" alt="Screen Shot 2022-11-29 at 4 18 43 PM"
src="https://user-images.githubusercontent.com/17913919/204676984-db7e2f47-e9b4-4632-823e-2e2763dd6105.png">

## How did you test this change?

[preview](https://frontend-pr-3351.onrender.com/)

## Are there any deployment considerations?

Will update the look of query rules in a separate PR, after brushing up
the Tag ui component.

--- a/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorsV2.module.scss
@@ -2,20 +2,19 @@
 
 .container {
 	--header-height: 45px;
-	--left-panel-width: 475px;
 
 	display: flex;
 	width: 100%;
 }
 
 .detailsContainer {
-	align-items: space-around;
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
 	height: 100%;
 
 	.errorDetails {
+		margin-left: 0;
 		padding: var(--size-large) var(--size-xxLarge);
 		width: 100%;
 	}
@@ -25,4 +24,13 @@
 		gap: var(--size-medium);
 		margin-top: var(--size-medium);
 	}
+}
+
+.moveDetailsRight {
+	margin-left: 340px;
+}
+
+.sessionSwitchButton {
+	border: 0 !important;
+	border-radius: 0;
 }
