Add environment card

--- a/frontend/src/pages/ErrorsV2/ErrorMetrics/ErrorMetrics.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorMetrics/ErrorMetrics.module.scss
@@ -15,3 +15,28 @@
 	align-items: center;
 	display: flex;
 }
+
+.environmentCard {
+	background-color: #f9f8f9;
+	border-radius: 8px;
+	margin-top: 16px;
+	padding: 8px;
+
+	.infoIconContainer {
+		align-items: flex-start;
+		background: #eeedef;
+		border-radius: 5px;
+		display: flex;
+		height: fit-content;
+		padding: var(--size-xxSmall);
+	}
+
+	.bodyTitle {
+		margin-bottom: var(--size-xxSmall);
+		padding-top: 6px;
+	}
+
+	.bodyText {
+		line-height: 20px;
+	}
+}
