--- a/frontend/src/components/LineChart/LineChart.module.scss
+++ b/frontend/src/components/LineChart/LineChart.module.scss
@@ -1,5 +1,9 @@
+@import 'src/static/shared.scss';
+
 .legendValue {
 	color: var(--color-gray-500) !important;
+	overflow: hidden;
+	text-overflow: ellipsis;
 
 	&.notShowing {
 		text-decoration: line-through;
@@ -44,4 +48,8 @@
 	color: var(--text-primary);
 	font-size: 12px;
 	line-height: initial;
+}
+
+.text {
+	@include hide-scrollbar;
 }
