--- a/frontend/src/components/Header/Notifications/Notification.module.scss
+++ b/frontend/src/components/Header/Notifications/Notification.module.scss
@@ -214,20 +214,8 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 	}
-
-	label {
-		display: flex;
-		flex-direction: column;
-		font-size: 10px;
-		row-gap: var(--size-xxSmall);
-	}
 }
 
 .filtersButton {
-	align-items: center;
-	color: var(--color-gray-500) !important;
-	column-gap: var(--size-xxSmall);
-	display: flex;
-	font-size: 12px;
-	height: var(--size-xLarge);
+	flex-shrink: 0;
 }
