--- a/frontend/src/pages/ErrorsV2/ErrorMetrics/ErrorMetrics.module.scss
+++ b/frontend/src/pages/ErrorsV2/ErrorMetrics/ErrorMetrics.module.scss
@@ -16,27 +16,12 @@
 	display: flex;
 }
 
-.environmentCard {
+.calloutContainer {
 	background-color: #f9f8f9;
-	border-radius: 8px;
-	margin-top: 16px;
-	padding: 8px;
-
-	.infoIconContainer {
-		align-items: flex-start;
-		background: #eeedef;
-		border-radius: 5px;
-		display: flex;
-		height: fit-content;
-		padding: var(--size-xxSmall);
-	}
-
-	.bodyTitle {
-		margin-bottom: var(--size-xxSmall);
-		padding-top: 6px;
-	}
+	margin-top: var(--size-medium);
 
 	.bodyText {
 		line-height: 20px;
+		margin-bottom: var(--size-small);
 	}
 }
