--- a/frontend/src/pages/EmailOptOut/EmailOptOut.module.scss
+++ b/frontend/src/pages/EmailOptOut/EmailOptOut.module.scss
@@ -4,3 +4,10 @@
 	padding: 24px;
 	width: 600px;
 }
+
+.header {
+	background-color: var(--color-neutral-50);
+	border-bottom: var(--color-neutral-200) solid 1px;
+	height: 45px;
+	width: 100%;
+}
